--- a/index.html
+++ b/index.html
@@ -367,6 +367,13 @@
 						</li>
 					</ul>
 				</div>
+				<div class="footer-email-input">
+					<p class="subscription soc-text">Subscribe</p>
+					<div class="subscriber">
+						<input class="email" type="email" name="email" placeholder="E-mail"/>
+						<button class="button footer-submit" type="submit">Subscribe<svg class="subscribe" width="24" height="24" ><use href="./images/icons.svg#icon-send"></use></svg></button>
+					</div>
+				</div>
 			</div>
 		</footer>
 	<!-- #endregion footer -->
