--- a/index.html
+++ b/index.html
@@ -378,5 +378,67 @@
 		</footer>
 	<!-- #endregion footer -->
 
+	<!-- #region modal -->
+	 <div class="backdrop in-open">
+		<div class="modal">
+			<button class="close-button" type="button">
+				<svg class="close-button-icon" width="8" height="8">
+					<use href="./images/icons.svg#icon-close"></use>
+				</svg>
+			</button>
+			<p class="modal-text">Leave your contacts and we will call you back</p>
+			<form class="modal-box-form">
+				<div class="modal-form-input-box">
+					<label class="modal-form-label" for="user-name">Name</label>
+					<div class="form-input-box">
+						<input class="form-input" id="user-name" name="user-name" type="text" required>
+						<svg class="modal-form-icon" width="18" height="18">
+							<use href="./images/icons.svg#icon-person"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="modal-form-input-box">
+					<label class="modal-form-label" for="user-phone">Phone</label>
+					<div class="form-input-box">
+						<input class="form-input" id="user-phone" name="user-phone" type="phone" required>
+						<svg class="modal-form-icon" width="18" height="24">
+							<use href="./images/icons.svg#icon-phone"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="modal-form-input-box">
+					<label class="modal-form-label" for="user-email">Email</label>
+					<div class="form-input-box">
+						<input class="form-input" id="user-email" name="user-email" type="email" required>
+						<svg class="modal-form-icon" width="18" height="24">
+							<use href="./images/icons.svg#icon-email"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="modal-form-input-box">
+					<label class="modal-form-label" for="user-comment">Comment</label>
+					<textarea class="form-comment" id="user-comment" name="comment" rows="5" placeholder="Text input"></textarea>
+				</div>
+				<div class="modal-form-checkbox">
+					<input type="checkbox" class="checkbox visually-hidden" id="user-checkbox">
+					<label class="label-checkbox" for="user-checkbox"><span class="custom-checkbox">
+						<svg class="icon-check" width="10" height="8">
+							<use href="./images/icons.svg#icon-check"></use>
+						</svg>
+					</span>I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
+				</div>
+				<button class="modal-button" type="submit">
+					Send
+				</button>
+			</form>
+		</div>
+	 </div>
+
+
+
+
+	<!-- #endregion modal -->
+
+
 </body>
 </html>
