--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 				<div class="footer-email-input">
 					<p class="subscription soc-text">Subscribe</p>
 					<div class="subscriber">
-						<input class="email" type="email" name="email" placeholder="E-mail"/>
+						<input class="email" type="email" name="email" placeholder="E-mail">
 						<button class="button footer-submit" type="submit">Subscribe<svg class="subscribe" width="24" height="24" ><use href="./images/icons.svg#icon-send"></use></svg></button>
 					</div>
 				</div>
@@ -400,7 +400,7 @@
 				<div class="modal-form-input-box">
 					<label class="modal-form-label" for="user-phone">Phone</label>
 					<div class="form-input-box">
-						<input class="form-input" id="user-phone" name="user-phone" type="phone" required>
+						<input class="form-input" id="user-phone" name="user-phone" type="tel" required>
 						<svg class="modal-form-icon" width="18" height="24">
 							<use href="./images/icons.svg#icon-phone"></use>
 						</svg>
