--- a/index.html
+++ b/index.html
@@ -369,10 +369,11 @@
 				</div>
 				<div class="footer-email-input">
 					<p class="subscription soc-text">Subscribe</p>
-					<div class="subscriber">
+					<form class="subscriber">
+						<label class="email-input" for="send"></label>
 						<input class="email" type="email" name="email" placeholder="E-mail">
-						<button class="button footer-submit" type="submit">Subscribe<svg class="subscribe" width="24" height="24" ><use href="./images/icons.svg#icon-send"></use></svg></button>
-					</div>
+						<button class="button footer-submit" id="send" type="submit">Subscribe<svg class="subscribe" width="24" height="24" ><use href="./images/icons.svg#icon-send"></use></svg></button>
+					</form>
 				</div>
 			</div>
 		</footer>
