--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
 				<div class="footer-email-input">
 					<p class="subscription soc-text">Subscribe</p>
 					<form class="subscriber">
-						<label class="email-input" for="send"></label>
-						<input class="email" type="email" name="email" placeholder="E-mail">
+						<label class="email-input" for="send">
+						<input class="email" type="email" name="email" placeholder="E-mail"></label>
 						<button class="button footer-submit" id="send" type="submit">Subscribe<svg class="subscribe" width="24" height="24" ><use href="./images/icons.svg#icon-send"></use></svg></button>
 					</form>
 				</div>
@@ -393,7 +393,7 @@
 					<label class="modal-form-label" for="user-name">Name</label>
 					<div class="form-input-box">
 						<input class="form-input" id="user-name" name="user-name" type="text" required>
-						<svg class="modal-form-icon" width="18" height="18">
+						<svg class="modal-form-icon" width="18" height="24">
 							<use href="./images/icons.svg#icon-person"></use>
 						</svg>
 					</div>
@@ -416,17 +416,19 @@
 						</svg>
 					</div>
 				</div>
-				<div class="modal-form-input-box">
+				<div class="modal-form-input-box form-user-comment">
 					<label class="modal-form-label" for="user-comment">Comment</label>
-					<textarea class="form-comment" id="user-comment" name="comment" rows="5" placeholder="Text input"></textarea>
+					<textarea class="form-comment" id="user-comment" name="user-comment" rows="5" placeholder="Text input"></textarea>
 				</div>
 				<div class="modal-form-checkbox">
-					<input type="checkbox" class="checkbox visually-hidden" id="user-checkbox">
-					<label class="label-checkbox" for="user-checkbox"><span class="custom-checkbox">
+					<input type="checkbox" class="checkbox visually-hidden" id="user-privacy" value="true" name="user-privacy">
+					<label class="label-checkbox" for="user-privacy"><span class="custom-checkbox">
 						<svg class="icon-check" width="10" height="8">
 							<use href="./images/icons.svg#icon-check"></use>
 						</svg>
-					</span>I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
+					</span>
+					I accept the terms and conditions of the 
+					<a class="privacy-policy" href="">Privacy Policy</a></label>
 				</div>
 				<button class="modal-button" type="submit">
 					Send
