small adjustments in footer

--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
 				<div class="footer-email-input">
 					<p class="subscription soc-text">Subscribe</p>
 					<form class="subscriber">
-						<label class="email-input" for="send">
+						<label class="email-input">
 						<input class="email" type="email" name="email" placeholder="E-mail"></label>
-						<button class="button footer-submit" id="send" type="submit">Subscribe<svg class="subscribe" width="24" height="24" ><use href="./images/icons.svg#icon-send"></use></svg></button>
+						<button class="button footer-submit" type="submit">Subscribe<svg class="subscribe-icon" width="24" height="24" ><use href="./images/icons.svg#icon-send"></use></svg></button>
 					</form>
 				</div>
 			</div>
